force-app/main/default/objects/EI_ApexClassCatelog__c/EI_ApexClassCatelog__c.object-meta.xml
<CustomObject>
    <label>EI ApexClassCatelog</label>
    <nameField>
        <displayFormat>P-{00000000}</displayFormat>
        <label>Process Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EI_ApexClassCatelog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>