force-app/main/default/objects/EI_ApexClassCatelog__c/fields/ApexClassName__c.field-meta.xml
<CustomField>
    <fullName>ApexClassName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ApexClassName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>