force-app/main/default/objects/EI_ApexClassCatelog__c/fields/FileNameRegex__c.field-meta.xml
<CustomField>
    <fullName>FileNameRegex__c</fullName>
    <description>Data file naming pattern in Regex</description>
    <encryptionScheme>None</encryptionScheme>
    <label>FileName Regex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>