force-app/main/default/objects/EI_ApexClassCatelog__c/fields/RequestType__c.field-meta.xml
<CustomField>
    <fullName>RequestType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RequestType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>