force-app/main/default/objects/EI_ApexClassCatelog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>RequestType__c</columns>
    <columns>ApexClassName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>